crates/brasa_lexer/src/snapshots/brasa_lexer__tests__ambiguous_colon.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\": ::\")"
---
Colon ":"
ColonColon "::"
Eof ""
