crates/brasa_lexer/src/snapshots/brasa_lexer__tests__ambiguous_dot.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\". .. ..=\")"
---
Dot "."
DotDot ".."
DotDotEq "..="
Eof ""
