crates/brasa_lexer/src/snapshots/brasa_lexer__tests__ambiguous_eq.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"= == =>\")"
---
Eq "="
EqEq "=="
FatArrow "=>"
Eof ""
