crates/brasa_lexer/src/snapshots/brasa_lexer__tests__ambiguous_pipe.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"| || |>\")"
---
Pipe "|"
OrOr "||"
PipeGt "|>"
Eof ""
