crates/brasa_lexer/src/snapshots/brasa_lexer__tests__ambiguous_question.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"?? ?.\")"
---
QuestionQuestion "??"
QuestionDot "?."
Eof ""
