crates/brasa_lexer/src/snapshots/brasa_lexer__tests__ambiguous_star.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"* **\")"
---
Star "*"
StarStar "**"
Eof ""
