crates/brasa_lexer/src/snapshots/brasa_lexer__tests__bang_ident.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"sort!\")"
---
Ident "sort!"
Eof ""
