crates/brasa_lexer/src/snapshots/brasa_lexer__tests__catch_all_is_not_a_keyword.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"catch_all\")"
---
Ident "catch_all"
Eof ""
