crates/brasa_lexer/src/snapshots/brasa_lexer__tests__char_multibyte.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"'\\u{f1}'\")"
---
Char "'ñ'"
Eof ""
