crates/brasa_lexer/src/snapshots/brasa_lexer__tests__comment_skipped.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"a # trailing comment\\nb\")"
---
Ident "a"
Newline "\n"
Ident "b"
Eof ""
