crates/brasa_lexer/src/snapshots/brasa_lexer__tests__comment_then_newline.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"# just a comment\\n\")"
---
Newline "\n"
Eof ""
