crates/brasa_lexer/src/snapshots/brasa_lexer__tests__crlf_newline_is_one_token.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"a\\r\\nb\")"
---
Ident "a"
Newline "\r\n"
Ident "b"
Eof ""
